# emergence-tauri

./: package.json  pnpm-lock.yaml  splashscreen.html  tailwind.config.js  vite.config.ts
src/: App.svelte  splash.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  auth_handler.rs  config_store.rs  database.rs  dto.rs  error.rs  explorer_handler.rs  img_encryptor.rs  keystore_handler.rs  main.rs  mapper.rs  security.rs  security_handler.rs
src/api/: auth.ts  explorer.ts  img_encryption.ts
src/components/Accordion/: FolderAccordion.svelte  FolderItem.svelte
src/components/Button/: AddButton.svelte  Button.svelte  ButtonReport.svelte  ExportButton.svelte  ImportButton.svelte  LoginButton.svelte  OutlineButton.svelte  RegisterButton.svelte  ToppingButton.svelte
src/components/Card/: FileCard.svelte  FileTreeCard.svelte  FolderCard.svelte  HistoryCard.svelte  MetaCard.svelte
src/components/Icons/: ArrowRight.svelte  Bars.svelte  Book.svelte  ChevronUp.svelte  CloudDown.svelte  Document.svelte  DocumentArrowDown.svelte  Folder.svelte  FolderOpen.svelte  FolderPlus.svelte  PlusCircle.svelte  Search.svelte  Wrench.svelte
src/components/Input/: Calendar.svelte  ComboboxInputReport.svelte  ControlledInput.svelte  ControlledReportDropdown.svelte  ControlledSolidDropdown.svelte  CurrencyInputVanilla.svelte  CustomCommaInput.svelte  CustomInput.svelte  CustomInputEnter.svelte  CustomLocaledNumberInput.svelte  DatePickerReport.svelte  DropdownInput.svelte  FileInput.svelte  FileInputTemp.svelte  FileInputWithoutUpload.svelte  Label.svelte  LocaledDatePicker.svelte  MonthPickerReport.svelte  PercentageInput.svelte  PercentageInputVanilla.svelte  PhotoInput.svelte
src/components/Layouts/: BackgroundLayout.svelte  DashboardLayout.svelte  LoginLayout.svelte
src/constant/: routes.ts  schema.ts
src/hooks/: createExplorerHandler.ts  createFileDropHandler.ts  createFileUploadHandler.ts  createMutationForm.ts
src/locales/: id.json
src/stores/: explorerStore.ts
src/types/: api.types.ts  rust.types.ts
src/utils/: utils.ts
(+16 files in other folders)
