[package]
name = "emergence-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
p256 = { version = "0.13.2", features = [
    "std",
    "arithmetic",
    "ecdh"
], default-features = false }
aes = { version = "0.8.3", default-features = false }
cbc = { version = "0.1.2", features = [
    "block-padding",
    "alloc"
], default-features = false }
hmac = { version = "0.12.1", default-features = false }
sha2 = { version = "0.10.7", default-features = false }
hkdf = { version = "0.12.3", default-features = false }
thiserror = "1.0.40"
rand_core = { version = "0.6.4", default-features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [
    "protocol-asset",
    "fs-all",
    "path-all",
    "devtools"
] }
chrono = { version = "0.4.31", features = ["serde"] }
rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
portpicker = "0.1"
tokio = { version = "1.24.2", features = ["full"], default-features = false }
data-encoding = { version = "2.4.0", default-features = false, features = [
    "alloc"
] }
anyhow = { version = "1.0", default-features = false }
rand = "0.8.5"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "^0.4"
argon2 = { version = "0.5.2" }
image = { version = "0.24.7", features = [
    "bmp",
    "gif",
    "jpeg",
    "png",
    "tga",
    "webp"
] }
rayon = "1.8.0"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
